# Psyche

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  callbacks.py  fly.toml  layout.py  main.py  pyproject.toml  requirements.txt
src/: main.py  wsgi.py
src/api/: sentiment.py
src/ui/: app.py  callbacks.py  layout.py
