[project]
name = "psyche"
version = "0.1.0"
description = "sentinment analysis............. deez nuts"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dash>=2.14.2",
    "dash-bootstrap-components>=1.5.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "requests>=2.31.0",
    "textblob>=0.19.0",
]
